[package]
name = "day_02"
version = "0.1.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
regex = "1.4.2"
anyhow = "1.0.37"
itertools = "0.10.0"
