[package]
name = "day_08"
version = "0.1.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.37"
thiserror = "1.0.23"
regex = "1.4.3"
lazy_static = "1.4.0"
